# zmlc-router

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  SUPPORT.md  install.ps1  install.sh  pyproject.toml
.agents/plugins/: marketplace.json
.github/ISSUE_TEMPLATE/: solver-request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: codex_ab_smoke.jsonl  generate_public_corpus.py  public_mixed_200.jsonl
benchmarks/results/: codex_ab_smoke_gpt-5.5.json
docs/: ARCHITECTURE.md  BENCHMARKING.md  CODEX_PREFLIGHT.md  INSTALL.md  PLUGIN.md  PRIVACY.md  ROADMAP_PUBLIC.md  SOLVER_TEMPLATE.md  VERSIONING.md  WHY_ZMLC.md
examples/: basic.py
plugins/zmlc-router/: .mcp.json  README.md
plugins/zmlc-router/.codex-plugin/: plugin.json
plugins/zmlc-router/runtime/: zmlc_router.pyz
plugins/zmlc-router/scripts/: zmlc_mcp.py
plugins/zmlc-router/skills/zmlc-routing/: SKILL.md
plugins/zmlc-router/skills/zmlc-routing/references/: token-policy.md
scripts/: build_plugin_runtime.py  build_standalone.py  check_release.py  package_bundle.py  render_brand_assets.py  run_codex_ab.py  smoke_release_archive.py  smoke_standalone.py  standalone_cli_entry.py  standalone_entry.py
src/zmlc/: __init__.py  benchmark.py  cli.py  codex_ab.py  codex_runner.py  doctor.py  experiments.py  mcp_server.py  models.py  policy.py  prompting.py  registry.py  router.py  telemetry.py  verifiers.py
src/zmlc/providers/: __init__.py  base.py  openai_compatible.py
src/zmlc/solvers/: __init__.py  base.py  builtin.py  structured.py
tests/: test_advanced_solvers.py  test_codex_ab.py  test_codex_runner.py  test_doctor.py  test_experiments.py  test_mcp_contract.py  test_prompting.py  test_router.py  test_solver_properties.py  test_telemetry_benchmark.py
