[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zmlc-router"
version = "0.9.0"
description = "Local-first routing framework for deterministic solvers, verifiers, local models, and remote LLM fallbacks."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "RTHack"}]
keywords = ["llm", "routing", "token-efficiency", "solvers", "mcp", "codex"]
dependencies = []

[project.urls]
Homepage = "https://github.com/rthgit/zmlc-router"
Documentation = "https://github.com/rthgit/zmlc-router/tree/main/docs"
Issues = "https://github.com/rthgit/zmlc-router/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
zmlc = "zmlc.cli:main"
zmlc-mcp = "zmlc.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
